# data-dash

./: .gitignore  Pipfile  __main__.py  app.py  awscostexplorer.py  awscostparser.py  pyproject.toml  requirements.txt
assets/: style.css
