[tool.poetry]
name = "data-dash"
version = "0.1.0"
description = "Dashboard for the AWS Cost Explorer"
authors = ["Jitse-Jan <code@jitsejan.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^1.19.0"
pandas = "^1.2.3"
boto3 = "^1.17.35"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
